fix: reusable dom visible problem

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,10 @@
       position: absolute;
       display: flex;
       // border-bottom: 1px solid red;
+
+      &.hidden {
+        visibility: hidden;
+      }
     }
   }
 }
